2002-03-13  Hans-Peter Nilsson  <hp@axis.com>

	* config/cris/cris.c (cris_target_asm_function_prologue): Revert
	2002-03-12 internal visibility change. 
	(cris_encode_section_info): Consider MODULE_LOCAL_P when encoding
	visibility into SYMBOL_REF_FLAG.

2002-03-13  Ulrich Weigand  <uweigand@de.ibm.com>

	* expr.c (expand_expr, case NE_EXPR): Do not call copy_to_reg with
	VOIDmode operand.  Add compile-time optimization for constant results.

2002-03-12  Jason Merrill  <jason@redhat.com>

	* c-typeck.c (convert_for_assignment): Don't allow conversions
	between pointers and references.  Only allow lvalues to convert to
	reference.

2002-03-13  Hartmut Penner  <hpenner@de.ibm.com>

        * config/s390/s390.h (PROFILE_BEFORE_PROLOGUE): Emit profile code
        before prologue, to avoid scheduling problems.

2002-03-13  Jakub Jelinek  <jakub@redhat.com>

	* config/sparc/sparc.h (INITIAL_FRAME_POINTER_OFFSET): Remove.
	(ELIMINABLE_REGS): Add sfp->sp.
	(INITIAL_ELIMINATION_OFFSET): Compute sfp->sp offset too.

2002-03-13  Jakub Jelinek  <jakub@redhat.com>

	PR optimization/5892
	* config/ia64/ia64.c (rotate_one_bundle): Update current packet.

2002-03-13  Jakub Jelinek  <jakub@redhat.com>

	* loop.c (basic_induction_var): Don't call convert_modes if mode
	classes are different.

2002-03-12  Richard Henderson  <rth@redhat.com>

	PR optimization/5901
	* function.c (reposition_prologue_and_epilogue_notes): Position
	the markers after/before the last/first insn not deleted.

2002-03-12  Richard Henderson  <rth@redhat.com>

	PR optimization/5878
	* config/arc/arc.h, config/cris/cris.h, config/i386/i386.h,
	config/m68k/m68k.h, config/s390/s390.h, config/sparc/sparc.h
	(PIC_OFFSET_TABLE_REGNUM): Conditionalize on flag_pic.

	* config/arm/arm.h config/i386/i386.h, config/m68k/m68k.h,
	config/sparc/sparc.h (CONDITIONAL_REGISTER_USAGE): Set
	PIC_OFFSET_TABLE_REGNUM based on INVALID_REGNUM not flag_pic.

	* config/arc/arc.h (CONDITIONAL_REGISTER_USAGE): New.